added few slides,
changed formatting

--- a/index.html
+++ b/index.html
@@ -1,106 +1,106 @@
 <!doctype html>
 <html lang="en">
 
-	<head>
-		<meta charset="utf-8">
+    <head>
+        <meta charset="utf-8">
 
-		<title>revaal.js – The HTML Presentation Framework</title>
+        <title>revaal.js – The HTML Presentation Framework</title>
 
-		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-		<meta name="author" content="Hakim El Hattab">
+        <meta name="description" content="A framework for easily creating beautiful presentations using HTML">
+        <meta name="author" content="Hakim El Hattab">
 
-		<meta name="apple-mobile-web-app-capable" content="yes">
-		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
-		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/league.css" id="theme">
+        <link rel="stylesheet" href="css/reveal.css">
+        <link rel="stylesheet" href="css/theme/league.css" id="theme">
 
-		<!-- Code syntax highlighting -->
-		<link rel="stylesheet" href="lib/css/zenburn.css">
+        <!-- Code syntax highlighting -->
+        <link rel="stylesheet" href="lib/css/zenburn.css">
 
-		<!-- Printing and PDF exports -->
-		<script>
-			var link = document.createElement( 'link' );
-			link.rel = 'stylesheet';
-			link.type = 'text/css';
-			link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
-			document.getElementsByTagName( 'head' )[0].appendChild( link );
-		</script>
+        <!-- Printing and PDF exports -->
+        <script>
+            var link = document.createElement( 'link' );
+            link.rel = 'stylesheet';
+            link.type = 'text/css';
+            link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
+            document.getElementsByTagName( 'head' )[0].appendChild( link );
+        </script>
 
-		<!--[if lt IE 9]>
-		<script src="lib/js/html5shiv.js"></script>
-		<![endif]-->
-		<!--style>
-			.fragment.visible:not(.current-fragment) {
-				display: none;
-				height:0px;
-				line-height: 0px;
-				font-size: 0px;
-			}
-		</style-->
-	</head>
+        <!--[if lt IE 9]>
+        <script src="lib/js/html5shiv.js"></script>
+        <![endif]-->
+        <!--style>
+            .fragment.visible:not(.current-fragment) {
+                display: none;
+                height:0px;
+                line-height: 0px;
+                font-size: 0px;
+            }
+        </style-->
+    </head>
 
-	<body>
+    <body>
 
-		<div class="reveal">
+        <div class="reveal">
 
-			<!-- Any section element inside of this container is displayed as a slide -->
-			<div class="slides">
-				<section data-markdown="">
-					## Solarize Magento
-					Using a searchengine for more than just search
-				</section>
-				<section data-markdown="">
-					## About me
-					- Nils Preuss @tutnix
-					- Tech Lead Ecommerce
-					- Polo-motorrad @polo-motorrad
-				</section>
-				<section >
-					<section>
-					<h2>Starting Point</h2>
-					<ul>
-						<li>one storeview with SaaS Solution</li>
-						<ul>
-								<li class="fragment">costly</li>
-								<li class="fragment">fully tuned</li>
-								<li class="fragment">problems with complex scenarios</li>
-							</ul>
+            <!-- Any section element inside of this container is displayed as a slide -->
+            <div class="slides">
+                <section data-markdown="">
+                    ## Solarize Magento
+                    Using a searchengine for more than just search
+                </section>
+                <section data-markdown="">
+                    ## About me
+                    - Nils Preuss @tutnix
+                    - Tech Lead Ecommerce
+                    - Polo-motorrad @polo-motorrad
+                </section>
+                <section >
+                    <section>
+                    <h2>Starting Point</h2>
+                    <ul>
+                        <li>one storeview with SaaS Solution</li>
+                        <ul>
+                                <li class="fragment">costly</li>
+                                <li class="fragment">fully tuned</li>
+                                <li class="fragment">problems with complex scenarios</li>
+                            </ul>
                         <li>two storeviews with MySQL Search</li>
-						<ul>
-							<li class="fragment">super slow</li>
-							<li class="fragment">bad result relevance</li>
-						</ul>
-					</ul>
-					</section>
-					<section data-markdown="">
-						## Alternatives
-						- Solr
-						- Elasticsearch
-						- Sphinx
-						- SaaS
-					</section>
-					<section data-markdown="">
-						## Solr and Elasticsearch
-						- personal preference
-						- for search, both shine
-						- colleague with Solr experience
-					</section>
-					<section data-markdown="">
-						## Sphinx
-						- no internal experience
-						- no api available
-					</section>
-					<section data-markdown="">
-						## SaaS
-						- lacking adaptability
-						- tempting to optimize result not data
-						- can become costly
-						- optimization not transferable
-					</section>
-				</section>
+                        <ul>
+                            <li class="fragment">super slow</li>
+                            <li class="fragment">bad result relevance</li>
+                        </ul>
+                    </ul>
+                    </section>
+                    <section data-markdown="">
+                        ## Alternatives
+                        - Solr
+                        - Elasticsearch
+                        - Sphinx
+                        - SaaS
+                    </section>
+                    <section data-markdown="">
+                        ## Solr and Elasticsearch
+                        - personal preference
+                        - for search, both shine
+                        - colleague with Solr experience
+                    </section>
+                    <section data-markdown="">
+                        ## Sphinx
+                        - no internal experience
+                        - no api available
+                    </section>
+                    <section data-markdown="">
+                        ## SaaS
+                        - lacking adaptability
+                        - tempting to optimize result not data
+                        - can become costly
+                        - optimization not transferable
+                    </section>
+                </section>
                 <section>
                     <section data-markdown="">
                         ## Solr
@@ -121,25 +121,28 @@
                     </section>
                     <section data-markdown="">
                         ## More than simple search replacement
-						- auto suggest without magento interaction
-						- skip from index
-						- per product boost
+                        - auto suggest without magento interaction
+                        - skip from index
+                        - per product boost
                     </section>
                 </section>
-				<section>
-					<section data-markdown="">
-						## Enhance Solr usage
-						- infrastructure already in place
-						- most of the data already indexed
-						- got inspired by community members <!--@tim_bezhashvyly, @vinaikopp, @fabian_ikono -->
-						</section>
-					<section data-markdown="">
-						## Ideas
-						- get category_product relations
-						- get category_view data
-						- get product_view data
-						- keep html of those in solr
+                <section>
+                    <section data-markdown="">
+                        ## Enhance Solr usage
+                        - infrastructure already in place
+                        - most of the data already indexed
+
+                        - got inspired by lizards and pumpkins
+
+  @tim_bezhashvyly, @vinaikopp, @fabian_ikono
 					</section>
+                    <section data-markdown="">
+                        ## Ideas
+                        - get category_product relations
+                        - get category_view data
+                        - get product_view data
+                        - keep html of those in solr
+                    </section>
                     <section data-markdown="">
                         ## Category Product Relations
                         - all data is there
@@ -180,7 +183,7 @@
                         - rebuild after data changes
                         - rebuild after template changes
                     </section>
-				</section>
+                </section>
                 <section>
                     <section data-markdown="">
                         ## Magento 2
@@ -188,37 +191,42 @@
                         - extended ideas are transferable
                     </section>
                 </section>
-			</div>
+                <section data-markdown="">
+                    ## Answers?
+                    - Twitter: @tutnix
+                    - slides at http://github.com/nhp/m2isl.git
+                </section>
+            </div>
 
-		</div>
+        </div>
 
-		<script src="lib/js/head.min.js"></script>
-		<script src="js/reveal.js"></script>
+        <script src="lib/js/head.min.js"></script>
+        <script src="js/reveal.js"></script>
 
-		<script>
+        <script>
 
-			// Full list of configuration options available at:
-			// https://github.com/hakimel/reveal.js#configuration
-			Reveal.initialize({
-				controls: true,
-				progress: true,
-				history: true,
-				center: true,
+            // Full list of configuration options available at:
+            // https://github.com/hakimel/reveal.js#configuration
+            Reveal.initialize({
+                controls: true,
+                progress: true,
+                history: true,
+                center: true,
 
-				transition: 'slide', // none/fade/slide/convex/concave/zoom
+                transition: 'slide', // none/fade/slide/convex/concave/zoom
 
-				// Optional reveal.js plugins
-				dependencies: [
-					{ src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
-					{ src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-					{ src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
-					{ src: 'plugin/zoom-js/zoom.js', async: true },
-					{ src: 'plugin/notes/notes.js', async: true }
-				]
-			});
+                // Optional reveal.js plugins
+                dependencies: [
+                    { src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
+                    { src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+                    { src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+                    { src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+                    { src: 'plugin/zoom-js/zoom.js', async: true },
+                    { src: 'plugin/notes/notes.js', async: true }
+                ]
+            });
 
-		</script>
+        </script>
 
-	</body>
+    </body>
 </html>
