fix typo in repository name

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 <section data-markdown="">
                     ## Answers?
                     - Twitter: @tutnix
-                    - slides at http://github.com/nhp/m2isl.git
+                    - slides at http://github.com/nhp/solarize_magento.git
                 </section>
             </div>
 
