Fix change project idea slide

--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
                         - infrastructure already in place
                         - most of the data already indexed
 
-                        - got inspired by lizards and pumpkins
+                        - got inspired by "Lizards and Pumpkins" done by
 
-  @tim_bezhashvyly, @vinaikopp, @fabian_ikono
+  @tim_bezhashvyly, @fabian_ikono, @vinaikopp
 					</section>
                     <section data-markdown="">
                         ## Ideas
