--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
         <link rel="stylesheet" href="css/reveal.css">
-        <link rel="stylesheet" href="css/theme/league.css" id="theme">
+        <link rel="stylesheet" href="css/theme/white.css" id="theme">
 
         <!-- Code syntax highlighting -->
         <link rel="stylesheet" href="lib/css/zenburn.css">
@@ -48,18 +48,18 @@
 
             <!-- Any section element inside of this container is displayed as a slide -->
             <div class="slides">
-                <section data-markdown="">
+                <section data-background-image="mmfooter.png" data-background-position="bottom" data-background-size="50%" data-markdown="">
                     ## Solarize Magento
                     Using a searchengine for more than just search
                 </section>
-                <section data-markdown="">
+                <section  data-background-image="mmfooter.png" data-background-position="bottom" data-background-size="50%" data-markdown="">
                     ## About me
                     - Nils Preuss @tutnix
                     - Tech Lead Ecommerce
                     - Polo-motorrad @polo-motorrad
                 </section>
                 <section >
-                    <section>
+                    <section data-background-image="mmfooter.png" data-background-position="bottom" data-background-size="50%" >
                     <h2>Starting Point</h2>
                     <ul>
                         <li>one storeview with SaaS Solution</li>
@@ -75,25 +75,25 @@
                         </ul>
                     </ul>
                     </section>
-                    <section data-markdown="">
+                    <section  data-background-image="mmfooter.png" data-background-position="bottom" data-background-size="50%" data-markdown="">
                         ## Alternatives
                         - Solr
                         - Elasticsearch
                         - Sphinx
                         - SaaS
                     </section>
-                    <section data-markdown="">
+                    <section data-background-image="mmfooter.png" data-background-position="bottom" data-background-size="50%"  data-markdown="">
                         ## Solr and Elasticsearch
                         - personal preference
                         - for search, both shine
                         - colleague with Solr experience
                     </section>
-                    <section data-markdown="">
+                    <section data-background-image="mmfooter.png" data-background-position="bottom" data-background-size="50%"  data-markdown="">
                         ## Sphinx
                         - no internal experience
                         - no api available
                     </section>
-                    <section data-markdown="">
+                    <section data-background-image="mmfooter.png" data-background-position="bottom" data-background-size="50%"  data-markdown="">
                         ## SaaS
                         - lacking adaptability
                         - tempting to optimize result not data
@@ -102,24 +102,24 @@
                     </section>
                 </section>
                 <section>
-                    <section data-markdown="">
+                    <section  data-background-image="mmfooter.png" data-background-position="bottom" data-background-size="50%" data-markdown="">
                         ## Solr
                         - EE connector
                         - old versions (3.6 from 2012)
                     </section>
-                    <section data-markdown="">
+                    <section  data-background-image="mmfooter.png" data-background-position="bottom" data-background-size="50%" data-markdown="">
                         ## Alternatives again
                         - 3rd party module
                         - worked out of the box
                         - extendable
                     </section>
-                    <section data-markdown="">
+                    <section data-background-image="mmfooter.png" data-background-position="bottom" data-background-size="50%"  data-markdown="">
                         ## Pros of the module
                         - easy controllable
                         - attribute boost
                         - good communication with the developers
                     </section>
-                    <section data-markdown="">
+                    <section  data-background-image="mmfooter.png" data-background-position="bottom" data-background-size="50%" data-markdown="">
                         ## More than simple search replacement
                         - auto suggest without magento interaction
                         - skip from index
@@ -127,30 +127,30 @@
                     </section>
                 </section>
                 <section>
-                    <section data-markdown="">
+                    <section  data-background-image="mmfooter.png" data-background-position="bottom" data-background-size="50%" data-markdown="">
                         ## Enhance Solr usage
                         - infrastructure already in place
                         - most of the data already indexed
 
-                        - got inspired by "Lizards and Pumpkins" done by
+                        - got inspired by a poject done by
 
   @tim_bezhashvyly, @fabian_ikono, @vinaikopp
 					</section>
-                    <section data-markdown="">
+                    <section  data-background-image="mmfooter.png" data-background-position="bottom" data-background-size="50%" data-markdown="">
                         ## Ideas
                         - get category_product relations
                         - get category_view data
                         - get product_view data
                         - keep html of those in solr
                     </section>
-                    <section data-markdown="">
+                    <section  data-background-image="mmfooter.png" data-background-position="bottom" data-background-size="50%" data-markdown="">
                         ## Category Product Relations
                         - all data is there
                         - search for products with category_id
                         - filter magento collection
                         - return to normal magento-flow
                     </section>
-                    <section data-markdown="">
+                    <section  data-background-image="mmfooter.png" data-background-position="bottom" data-background-size="50%" data-markdown="">
                         ## Category view data
                         - extend the indexer
                         - more data needed
@@ -158,7 +158,7 @@
                         - put everything into Varien_Collection
                         - simple adaptions of templates
                     </section>
-                    <section data-markdown="">
+                    <section  data-background-image="mmfooter.png" data-background-position="bottom" data-background-size="50%" data-markdown="">
                         ## Product view data
                         - all product information into Solr
                         - rebuild product structure in Solr
@@ -166,17 +166,17 @@
                         - return data-JSON
                         - "mock" a product model with data
                     </section>
-                    <section data-markdown="">
+                    <section data-background-image="mmfooter.png" data-background-position="bottom" data-background-size="50%"  data-markdown="">
                         ## Improvements
                         - rebuild template for direct JSON parsing
                         - use JS for JSON2HTML templating
                     </section>
-                    <section data-markdown="">
+                    <section data-background-image="mmfooter.png" data-background-position="bottom" data-background-size="50%"  data-markdown="">
                         ## Benefits of HTML in Solr
                         - most performant solution
                         - easier scaleable
                     </section>
-                    <section data-markdown="">
+                    <section data-background-image="mmfooter.png" data-background-position="bottom" data-background-size="50%"  data-markdown="">
                         ## Problems with HTML from Solr
                         - slower indexing
                         - WAY bigger index (multistore)
@@ -185,13 +185,13 @@
                     </section>
                 </section>
                 <section>
-                    <section data-markdown="">
+                    <section data-background-image="mmfooter.png" data-background-position="bottom" data-background-size="50%"  data-markdown="">
                         ## Magento 2
                         - extension migration already begun
                         - extended ideas are transferable
                     </section>
                 </section>
-                <section data-markdown="">
+                <section  data-background-image="mmfooter.png" data-background-position="bottom" data-background-size="50%" data-markdown="">
                     ## Answers?
                     - Twitter: @tutnix
                     - slides at http://github.com/nhp/solarize_magento.git
